--- a/FinalProject/FinalProject.vcxproj
+++ b/FinalProject/FinalProject.vcxproj
@@ -161,6 +161,9 @@
     <ClInclude Include="Schedule.h" />
     <ClInclude Include="Supplier.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\forProject.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
